CDTT-468 Initial fork from rm-common-config