@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.gov.ons.ctp.product</groupId>
-  <artifactId>rm-common-config</artifactId>
-  <version>10.49.14-SNAPSHOT</version>
+  <artifactId>census-int-common-config</artifactId>
+  <version>0.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>CTP SDC Dependencies</name>
-  <description>CTP SDC Dependencies</description>
-  <url>https://github.com/ONSdigital/rm-common-config</url>
+  <name>CTP Integration Dependencies</name>
+  <description>CTP Integration Dependencies</description>
+  <url>https://github.com/ONSdigital/census-int-common-config</url>
 
   <organization>
     <name>UK Office For National Statistics</name>
@@ -22,19 +22,21 @@
   </licenses>
 
   <scm>
-    <url>https://github.com/ONSdigital/rm-common-config</url>
-    <connection>scm:git:https://github.com/ONSdigital/rm-common-config</connection>
-    <developerConnection>scm:git:https://github.com/ONSdigital/rm-common-config</developerConnection>
+    <url>https://github.com/ONSdigital/census-int-common-config</url>
+    <connection>scm:git:https://github.com/ONSdigital/census-int-common-config</connection>
+    <developerConnection>scm:git:https://github.com/ONSdigital/census-int-common-config</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
   <properties>
-    <springboot.version>1.5.6.RELEASE</springboot.version>
-    <springcloud.version>Dalston.SR1</springcloud.version>
-    <common.version>10.49.4</common.version>
-    <java.version>1.8</java.version>
-    <orika.version>1.5.1</orika.version>
-    <surefire.version>2.20</surefire.version>
+    <springboot.version>2.1.0.RELEASE</springboot.version>
+    <springrabbit.version>2.1.1.RELEASE</springrabbit.version> <!-- sync with boot? -->
+    <springcloud.version>Finchley.RELEASE</springcloud.version>
+    <common.version>0.0.0-SNAPSHOT</common.version>
+    <java.version>11</java.version>
+    <jacoco.version>0.8.2</jacoco.version>
+    <orika.version>1.5.2</orika.version>
+    <surefire.version>3.0.0-M1</surefire.version>
     <godaddylogging.version>1.2.5</godaddylogging.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -59,10 +61,39 @@
       </dependency>
 
       <dependency>
+        <groupId>org.springframework.amqp</groupId>
+        <artifactId>spring-amqp</artifactId>
+        <version>${springrabbit.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.amqp</groupId>
+        <artifactId>spring-rabbit</artifactId>
+        <version>${springrabbit.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>uk.gov.ons.ctp.common</groupId>
         <artifactId>framework</artifactId>
         <version>${common.version}</version>
       </dependency>
+
+      <!-- need separate jaxb deps after java11 removed them -->
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>2.3.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.3.0</version>
+      </dependency>
+
 
       <dependency>
         <groupId>ma.glasnost.orika</groupId>
@@ -75,7 +106,7 @@
         <artifactId>orika-eclipse-tools</artifactId>
         <version>${orika.version}</version>
       </dependency>
- 
+
       <dependency>
         <groupId>net.logstash.logback</groupId>
         <artifactId>logstash-logback-encoder</artifactId>
@@ -101,15 +132,31 @@
       </dependency>
 
       <dependency>
-        <groupId>net.sourceforge.cobertura</groupId>
-        <artifactId>cobertura</artifactId>
-        <version>2.1.1</version>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.8.1</version>
+      </dependency>
+
+      <!-- <dependency> <groupId>net.sourceforge.cobertura</groupId> <artifactId>cobertura</artifactId> 
+        <version>2.1.1</version> <exclusions> <exclusion> <artifactId>tools</artifactId> 
+        <groupId>com.sun</groupId> </exclusion> </exclusions> </dependency> -->
+
+      <dependency>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.jacoco</groupId>
+        <artifactId>org.jacoco.core</artifactId>
+        <version>${jacoco.version}</version>
       </dependency>
 
       <dependency>
         <groupId>net.codesup.util</groupId>
         <artifactId>jaxb2-rich-contract-plugin</artifactId>
-        <version>1.18.0</version>
+        <version>2.0.0</version>
       </dependency>
 
       <dependency>
@@ -146,6 +193,14 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.7</version>
+          <configuration>
+            <generateBackupPoms>false</generateBackupPoms>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.3</version>
@@ -156,24 +211,25 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.6.2</version>
+          <version>3.8.0</version>
           <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
+            <release>${java.version}</release>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.17</version>
+          <version>3.0.0</version>
           <configuration>
-            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
+            <sourceDirectories>
+              <dir>${project.build.sourceDirectory}</dir>
+            </sourceDirectories>
           </configuration>
           <dependencies>
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>8.1</version>
+              <version>8.14</version>
             </dependency>
           </dependencies>
           <executions>
@@ -207,8 +263,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>${surefire.version}</version>
+          <version>2.22.0</version>
           <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
             <threadCount>1</threadCount>
           </configuration>
           <!-- REQUIRED for unit tests to run -->
@@ -216,7 +275,7 @@
             <dependency>
               <groupId>org.apache.maven.surefire</groupId>
               <artifactId>surefire-junit47</artifactId>
-              <version>${surefire.version}</version>
+              <version>2.22.0</version>
             </dependency>
           </dependencies>
         </plugin>
@@ -249,13 +308,14 @@
         <plugin>
           <groupId>org.jvnet.jaxb2.maven2</groupId>
           <artifactId>maven-jaxb2-plugin</artifactId>
-          <version>0.13.1</version>
+          <version>0.14.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
   </build>
 
   <distributionManagement>
+  <!--  TODO
     <repository>
       <id>central</id>
       <name>libs-release</name>
@@ -266,6 +326,7 @@
       <name>libs-snapshots</name>
       <url>http://artifactory-sdc.onsdigital.uk/artifactory/libs-snapshot-local</url>
     </snapshotRepository>
+ -->
   </distributionManagement>
 
 </project>
